Fixed navbar collapse toggle, cleaned up home and colors

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Used this method to include fontawesome styles globally but I am not sure
+  if this is the best way to do it, seems to work and tested that the dist output is valid
+   see https://fontawesome.com/how-to-use/on-the-web/using-with/angular  */
+@import "https://use.fontawesome.com/releases/v5.3.1/css/all.css";
